--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+        
     	<!-- Required meta tags always come first -->
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,10 +15,10 @@
 
 <body>
 
-    <header>
-        <div>
-            <div>
-                <div>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
@@ -27,8 +28,9 @@
         </div>
     </header>
 
-    <div>
-        <div>
+    <div class="container">
+        <div class="row">
+        <div class="col-12 col-sm-4 col-md-4">
             <div>
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
@@ -39,7 +41,7 @@
         </div>
 
 
-        <div>
+        <div class="col-12 col-sm-4 col-md-4">
             <div>
                 <h3>This Month's Promotions</h3>
             </div>
@@ -49,7 +51,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="col-12 col-sm-4 col-md-4">
             <div>
                 <h3>Meet our Culinary Specialists</h3>
             </div>
@@ -60,11 +62,13 @@
             </div>
         </div>
     </div>
+</div>
+
 
     <footer>
-        <div>
-            <div>             
-                <div>
+        <div class="container">
+            <div class="row">             
+                <div class="col-4 col-sm-2">
                     <h5>Links</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -73,7 +77,7 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
 		              121, Clear Water Bay Road<br>
@@ -84,7 +88,7 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div>
+                <div class="col-7 col-sm-5">
                     <div>
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
